In-progress work on hours-entry.
